// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Request should render with loaded props 1`] = `
<RequestComponent
  currencyCode="BTC"
  currentScene="request"
  edgeWallet={Object {}}
  exchangeSecondaryToPrimaryRatio={Object {}}
  guiWallet={Object {}}
  loading={false}
  primaryCurrencyInfo={Object {}}
  receiveAddress={Object {}}
  secondaryCurrencyInfo={Object {}}
  showToWalletModal={false}
  theme={
    Object {
      "backgroundGradientLeft": "#0D2145",
      "backgroundGradientRight": "#0C446A",
      "buttonBoxShadow": "#000000",
      "buySellCustomPluginModalIcon": "#0C446A",
      "dangerText": "#E85466",
      "dateModalBackgroundDark": "#0E4B75",
      "dateModalBackgroundLight": "#FFFFFF",
      "dateModalTextDark": "#FFFFFF",
      "dateModalTextLight": "#0073D9",
      "deactivatedText": "#87939E",
      "fioAddressLogo": Object {
        "testUri": "../../../src/assets/images/details_fioAddress.png",
      },
      "fontFaceBold": "Quicksand-Medium",
      "fontFaceDefault": "Quicksand-Regular",
      "fontFaceSymbols": "Quicksand-Regular",
      "guiPluginLogoBitaccess": Object {
        "testUri": "../../../src/assets/images/guiPlugins/guiPluginLogoBitaccessDark.png",
      },
      "guiPluginLogoMoonpay": Object {
        "testUri": "../../../src/assets/images/guiPlugins/guiPluginLogoMoonpayDark.png",
      },
      "icon": "#FFFFFF",
      "iconLoadingOverlay": "rgba(255, 255, 255, .75)",
      "iconTappable": "#66EDA8",
      "lineDivider": "rgba(255, 255, 255, .1)",
      "mediumLineWidth": 2,
      "modal": "#003B65",
      "modalBlurType": "light",
      "modalCloseIcon": "#66EDA8",
      "negativeText": "#E85466",
      "paymentTypeLogoApplePay": Object {
        "testUri": "../../../src/assets/images/paymentTypes/paymentTypeLogoApplePay.png",
      },
      "paymentTypeLogoAuspost": Object {
        "testUri": "../../../src/assets/images/paymentTypes/paymentTypeLogoAuspost.png",
      },
      "paymentTypeLogoBankTransfer": Object {
        "testUri": "../../../src/assets/images/paymentTypes/paymentTypeLogoBankTransfer.png",
      },
      "paymentTypeLogoBankgirot": Object {
        "testUri": "../../../src/assets/images/paymentTypes/paymentTypeLogoBankgirot.png",
      },
      "paymentTypeLogoBpay": Object {
        "testUri": "../../../src/assets/images/paymentTypes/paymentTypeLogoBpay.png",
      },
      "paymentTypeLogoCash": Object {
        "testUri": "../../../src/assets/images/paymentTypes/paymentTypeLogoCash.png",
      },
      "paymentTypeLogoCreditCard": Object {
        "testUri": "../../../src/assets/images/paymentTypes/paymentTypeLogoCreditCard.png",
      },
      "paymentTypeLogoDebitCard": Object {
        "testUri": "../../../src/assets/images/paymentTypes/paymentTypeLogoDebitCard.png",
      },
      "paymentTypeLogoFasterPayments": Object {
        "testUri": "../../../src/assets/images/paymentTypes/paymentTypeLogoFasterPayments.png",
      },
      "paymentTypeLogoGiftCard": Object {
        "testUri": "../../../src/assets/images/paymentTypes/paymentTypeLogoGiftCard.png",
      },
      "paymentTypeLogoIdeal": Object {
        "testUri": "../../../src/assets/images/paymentTypes/paymentTypeLogoIdeal.png",
      },
      "paymentTypeLogoNewsagent": Object {
        "testUri": "../../../src/assets/images/paymentTypes/paymentTypeLogoNewsagent.png",
      },
      "paymentTypeLogoPayid": Object {
        "testUri": "../../../src/assets/images/paymentTypes/paymentTypeLogoPayid.png",
      },
      "paymentTypeLogoPoli": Object {
        "testUri": "../../../src/assets/images/paymentTypes/paymentTypeLogoPoli.png",
      },
      "paymentTypeLogoSofort": Object {
        "testUri": "../../../src/assets/images/paymentTypes/paymentTypeLogoSofort.png",
      },
      "paymentTypeLogoSwish": Object {
        "testUri": "../../../src/assets/images/paymentTypes/paymentTypeLogoSwish.png",
      },
      "paymentTypeLogoUpi": Object {
        "testUri": "../../../src/assets/images/paymentTypes/paymentTypeLogoUpi.png",
      },
      "positiveText": "#77C513",
      "primaryButton": "#66EDA8",
      "primaryButtonOutline": "rgba(255, 255, 255, 0)",
      "primaryButtonText": "#0E4B75",
      "primaryText": "#FFFFFF",
      "rem": [Function],
      "searchListRefreshControlIndicator": "rgba(255, 255, 255, 0)",
      "secondaryButton": "rgba(255, 255, 255, 0)",
      "secondaryButtonOutline": "#66EDA8",
      "secondaryButtonText": "#66EDA8",
      "secondaryText": "#A4C7DF",
      "settingsChangellyLogo": Object {
        "testUri": "../../../src/assets/images/exchange/settingsExchangeChangelly.png",
      },
      "settingsChangenowLogo": Object {
        "testUri": "../../../src/assets/images/exchange/settingsExchangeChangenow.png",
      },
      "settingsCoinswitchLogo": Object {
        "testUri": "../../../src/assets/images/exchange/settingsExchangeCoinswitch.png",
      },
      "settingsDefaultLogo": Object {
        "testUri": "../../../src/assets/images/exchange/settingsExchangeDefault.png",
      },
      "settingsFaastLogo": Object {
        "testUri": "../../../src/assets/images/exchange/settingsExchangeFaast.png",
      },
      "settingsFoxExchangeLogo": Object {
        "testUri": "../../../src/assets/images/exchange/settingsExchangeFoxExchange.png",
      },
      "settingsGodexLogo": Object {
        "testUri": "../../../src/assets/images/exchange/settingsExchangeGodex.png",
      },
      "settingsRowBackground": "rgba(255, 255, 255, 0)",
      "settingsRowHeaderBackground": "#0D2145",
      "settingsRowPressed": "rgba(255, 255, 255, 0)",
      "settingsRowSubHeader": "rgba(255, 255, 255, 0)",
      "settingsSideshiftLogo": Object {
        "testUri": "../../../src/assets/images/exchange/settingsExchangeSideShiftAI.png",
      },
      "settingsSwitchainLogo": Object {
        "testUri": "../../../src/assets/images/exchange/settingsExchangeSwitchain.png",
      },
      "settingsTotleLogo": Object {
        "testUri": "../../../src/assets/images/exchange/settingsExchangeTotle.png",
      },
      "sliderTabMore": "#0073D9",
      "sliderTabRequest": "#77C513",
      "sliderTabSend": "#E85466",
      "tabBarBackground": "#0D2145",
      "tabBarIcon": "#FFFFFF",
      "tabBarIconHighlighted": "#66EDA8",
      "textLink": "#66EDA8",
      "thinLineWidth": 1,
      "tileBackground": "rgba(255, 255, 255, 0)",
      "tileBackgroundMuted": "rgba(255, 255, 255, 0)",
      "toggleButton": "#66EDA8",
      "toggleButtonOff": "#87939E",
      "transactionListIconBackground": "#0C446A",
      "tutorialModalUnderlay": "rgba(255, 255, 255, 0)",
      "underlayColor": "#FFFFFF",
      "underlayOpacity": 0.95,
      "walletListBackground": "#0E4B75",
      "walletListMutedBackground": "#2F5E89",
      "walletListSlideTutorialImage": Object {
        "testUri": "../../../src/assets/images/tutorials/walletList_sliding_dark.gif",
      },
      "walletProgressIconBackground": "rgba(255, 255, 255, 0)",
      "walletProgressIconFill": "#66EDA8",
      "walletProgressIconFillDone": "rgba(255, 255, 255, 0)",
      "warningIcon": "#F1AA19",
      "warningText": "#F1AA19",
    }
  }
  useLegacyAddress={false}
  wallets={Object {}}
/>
`;

exports[`Request should render with loading props 1`] = `
<RequestComponent
  currencyCode={null}
  currentScene="request"
  edgeWallet={null}
  exchangeSecondaryToPrimaryRatio={null}
  guiWallet={null}
  loading={true}
  primaryCurrencyInfo={null}
  receiveAddress={null}
  secondaryCurrencyInfo={null}
  showToWalletModal={null}
  theme={
    Object {
      "backgroundGradientLeft": "#0D2145",
      "backgroundGradientRight": "#0C446A",
      "buttonBoxShadow": "#000000",
      "buySellCustomPluginModalIcon": "#0C446A",
      "dangerText": "#E85466",
      "dateModalBackgroundDark": "#0E4B75",
      "dateModalBackgroundLight": "#FFFFFF",
      "dateModalTextDark": "#FFFFFF",
      "dateModalTextLight": "#0073D9",
      "deactivatedText": "#87939E",
      "fioAddressLogo": Object {
        "testUri": "../../../src/assets/images/details_fioAddress.png",
      },
      "fontFaceBold": "Quicksand-Medium",
      "fontFaceDefault": "Quicksand-Regular",
      "fontFaceSymbols": "Quicksand-Regular",
      "guiPluginLogoBitaccess": Object {
        "testUri": "../../../src/assets/images/guiPlugins/guiPluginLogoBitaccessDark.png",
      },
      "guiPluginLogoMoonpay": Object {
        "testUri": "../../../src/assets/images/guiPlugins/guiPluginLogoMoonpayDark.png",
      },
      "icon": "#FFFFFF",
      "iconLoadingOverlay": "rgba(255, 255, 255, .75)",
      "iconTappable": "#66EDA8",
      "lineDivider": "rgba(255, 255, 255, .1)",
      "mediumLineWidth": 2,
      "modal": "#003B65",
      "modalBlurType": "light",
      "modalCloseIcon": "#66EDA8",
      "negativeText": "#E85466",
      "paymentTypeLogoApplePay": Object {
        "testUri": "../../../src/assets/images/paymentTypes/paymentTypeLogoApplePay.png",
      },
      "paymentTypeLogoAuspost": Object {
        "testUri": "../../../src/assets/images/paymentTypes/paymentTypeLogoAuspost.png",
      },
      "paymentTypeLogoBankTransfer": Object {
        "testUri": "../../../src/assets/images/paymentTypes/paymentTypeLogoBankTransfer.png",
      },
      "paymentTypeLogoBankgirot": Object {
        "testUri": "../../../src/assets/images/paymentTypes/paymentTypeLogoBankgirot.png",
      },
      "paymentTypeLogoBpay": Object {
        "testUri": "../../../src/assets/images/paymentTypes/paymentTypeLogoBpay.png",
      },
      "paymentTypeLogoCash": Object {
        "testUri": "../../../src/assets/images/paymentTypes/paymentTypeLogoCash.png",
      },
      "paymentTypeLogoCreditCard": Object {
        "testUri": "../../../src/assets/images/paymentTypes/paymentTypeLogoCreditCard.png",
      },
      "paymentTypeLogoDebitCard": Object {
        "testUri": "../../../src/assets/images/paymentTypes/paymentTypeLogoDebitCard.png",
      },
      "paymentTypeLogoFasterPayments": Object {
        "testUri": "../../../src/assets/images/paymentTypes/paymentTypeLogoFasterPayments.png",
      },
      "paymentTypeLogoGiftCard": Object {
        "testUri": "../../../src/assets/images/paymentTypes/paymentTypeLogoGiftCard.png",
      },
      "paymentTypeLogoIdeal": Object {
        "testUri": "../../../src/assets/images/paymentTypes/paymentTypeLogoIdeal.png",
      },
      "paymentTypeLogoNewsagent": Object {
        "testUri": "../../../src/assets/images/paymentTypes/paymentTypeLogoNewsagent.png",
      },
      "paymentTypeLogoPayid": Object {
        "testUri": "../../../src/assets/images/paymentTypes/paymentTypeLogoPayid.png",
      },
      "paymentTypeLogoPoli": Object {
        "testUri": "../../../src/assets/images/paymentTypes/paymentTypeLogoPoli.png",
      },
      "paymentTypeLogoSofort": Object {
        "testUri": "../../../src/assets/images/paymentTypes/paymentTypeLogoSofort.png",
      },
      "paymentTypeLogoSwish": Object {
        "testUri": "../../../src/assets/images/paymentTypes/paymentTypeLogoSwish.png",
      },
      "paymentTypeLogoUpi": Object {
        "testUri": "../../../src/assets/images/paymentTypes/paymentTypeLogoUpi.png",
      },
      "positiveText": "#77C513",
      "primaryButton": "#66EDA8",
      "primaryButtonOutline": "rgba(255, 255, 255, 0)",
      "primaryButtonText": "#0E4B75",
      "primaryText": "#FFFFFF",
      "rem": [Function],
      "searchListRefreshControlIndicator": "rgba(255, 255, 255, 0)",
      "secondaryButton": "rgba(255, 255, 255, 0)",
      "secondaryButtonOutline": "#66EDA8",
      "secondaryButtonText": "#66EDA8",
      "secondaryText": "#A4C7DF",
      "settingsChangellyLogo": Object {
        "testUri": "../../../src/assets/images/exchange/settingsExchangeChangelly.png",
      },
      "settingsChangenowLogo": Object {
        "testUri": "../../../src/assets/images/exchange/settingsExchangeChangenow.png",
      },
      "settingsCoinswitchLogo": Object {
        "testUri": "../../../src/assets/images/exchange/settingsExchangeCoinswitch.png",
      },
      "settingsDefaultLogo": Object {
        "testUri": "../../../src/assets/images/exchange/settingsExchangeDefault.png",
      },
      "settingsFaastLogo": Object {
        "testUri": "../../../src/assets/images/exchange/settingsExchangeFaast.png",
      },
      "settingsFoxExchangeLogo": Object {
        "testUri": "../../../src/assets/images/exchange/settingsExchangeFoxExchange.png",
      },
      "settingsGodexLogo": Object {
        "testUri": "../../../src/assets/images/exchange/settingsExchangeGodex.png",
      },
      "settingsRowBackground": "rgba(255, 255, 255, 0)",
      "settingsRowHeaderBackground": "#0D2145",
      "settingsRowPressed": "rgba(255, 255, 255, 0)",
      "settingsRowSubHeader": "rgba(255, 255, 255, 0)",
      "settingsSideshiftLogo": Object {
        "testUri": "../../../src/assets/images/exchange/settingsExchangeSideShiftAI.png",
      },
      "settingsSwitchainLogo": Object {
        "testUri": "../../../src/assets/images/exchange/settingsExchangeSwitchain.png",
      },
      "settingsTotleLogo": Object {
        "testUri": "../../../src/assets/images/exchange/settingsExchangeTotle.png",
      },
      "sliderTabMore": "#0073D9",
      "sliderTabRequest": "#77C513",
      "sliderTabSend": "#E85466",
      "tabBarBackground": "#0D2145",
      "tabBarIcon": "#FFFFFF",
      "tabBarIconHighlighted": "#66EDA8",
      "textLink": "#66EDA8",
      "thinLineWidth": 1,
      "tileBackground": "rgba(255, 255, 255, 0)",
      "tileBackgroundMuted": "rgba(255, 255, 255, 0)",
      "toggleButton": "#66EDA8",
      "toggleButtonOff": "#87939E",
      "transactionListIconBackground": "#0C446A",
      "tutorialModalUnderlay": "rgba(255, 255, 255, 0)",
      "underlayColor": "#FFFFFF",
      "underlayOpacity": 0.95,
      "walletListBackground": "#0E4B75",
      "walletListMutedBackground": "#2F5E89",
      "walletListSlideTutorialImage": Object {
        "testUri": "../../../src/assets/images/tutorials/walletList_sliding_dark.gif",
      },
      "walletProgressIconBackground": "rgba(255, 255, 255, 0)",
      "walletProgressIconFill": "#66EDA8",
      "walletProgressIconFillDone": "rgba(255, 255, 255, 0)",
      "warningIcon": "#F1AA19",
      "warningText": "#F1AA19",
    }
  }
  useLegacyAddress={null}
  wallets={Object {}}
/>
`;
